# Programming-C

./: .gitignore  README.md
lab10/: functions.c  main
lab11/: 2z  4z
lab12/task1/: CMakeCache.txt  cmake_install.cmake
lab12/task1/pipes/: CMakeLists.txt
lab12/task2/03-code-generation/: Makefile  cmake_install.cmake
lab2/: z2.c.save  z3.c  zadanie3
lab3/: z1  z3  z5
lab4/: z1
lab6/: z2.c
lab7/z1/: main
lab8/: z1
lab9/: main.c
programming-c/: a.out
programming-c/lab1/: z1.c  z2.c  z3.c  z4.c  z5.c  zadanie1  zadanie2  zadanie3  zadanie4  zadanie5
semestr1/lab10/: 123  CMakeLists.txt  copy.c  functions.h  main.c  makefile
semestr1/lab11/: 2z.c  3z  3z.c  4z.c  CMakeLists.txt  main  main.c
semestr1/lab12/task0/: Makefile  task0
semestr1/lab12/task1/: CMakeLists.txt  Makefile  task1
semestr1/lab12/task1/background/: CMakeLists.txt  Makefile  cmake_install.cmake
semestr1/lab12/task1/pipes/: Makefile  cmake_install.cmake
semestr1/lab12/task2/: task2Url.txt
semestr1/lab2/: z1  z2  z2.c
semestr1/lab3/: z2  z4  z4.c
semestr1/lab4/: z1
semestr1/lab4/lab3/: z1.c  z5.c
semestr1/lab6/: z1  z2  z2.c
semestr1/lab7/z1/: main.c
semestr1/lab8/: main  z2
semestr1/lab9/: main
semestr1/lab9/lab2/: z1.c
semestr1/lab9/lab4/: z1.c
semestr1/lab9/lab4/lab3/: z2.c  z3.c
semestr1/lab9/lab5/: 1z.c  2z.c
semestr1/lab9/lab6/: z1.c
semestr1/lab9/lab8/: main.c  z2.c
semestr2/lab1/: main.c
semestr2/lab2/: main2.c
semestr2/lab3/: file.txt  mergesort.py  scr.odt  sort.c
semestr2/lab4/: main  main.c  my_file.txt
semestr2/lab5/: CMakeLists.txt  main.c
semestr2/lab6/: CMakeLists.txt  main  main.c  main_program_dynamic
semestr2/lab6/build_static/: CMakeCache.txt  Makefile  cmake_install.cmake  main_program
semestr2/lab6/include/: train.h
semestr2/lab6/src/: train.c
semestr2/lab7/: CMakeLists.txt  consumer  graph.py  lab7  lab7.md  lab76  lab78  main  main.c  matrix  matrix1
semestr2/lab8/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  lab8  main  test_cmocks
semestr2/lab8/Testing/Temporary/: CTestCostData.txt
semestr2/lab8/src/: main.c
semestr2/lab8/tests/: test_cmocka.c  tests
